#1602 #1620 fixed missing scrollbars in chrome on android

--- a/src/main/scss/main.scss
+++ b/src/main/scss/main.scss
@@ -1001,3 +1001,20 @@ md-toast.md-accent > .md-toast-content {
 .alert.alert-success, .alert.alert-success .alert-link {
     color: black;
 }
+
+@media screen and (max-width: 1280px) {
+  md-content::-webkit-scrollbar, .md-virtual-repeat-scroller::-webkit-scrollbar {
+    min-height: 12px;
+    width: 4px;
+  }
+
+  md-content::-webkit-scrollbar-thumb, .md-virtual-repeat-scroller::-webkit-scrollbar-thumb {
+    background-color: $brand-primary;
+    min-height: 2em;
+    border-radius: 8px;
+  }
+
+  md-content, .md-virtual-repeat-scroller {
+    overflow: overlay;
+  }
+}
